@@ -64,6 +64,7 @@ aarch64-tests: \
 	test0037-aarch64-binary \
 	test0038-aarch64-binary \
 	test0039-aarch64-binary \
+	test0040-aarch64-binary \
 	test0100-aarch64-binary \
 	test0101-aarch64-binary \
 	test0102-aarch64-binary \
@@ -114,6 +115,7 @@ amd64-tests: \
 	test0037-amd64-binary \
 	test0038-amd64-binary \
 	test0039-amd64-binary \
+	test0040-amd64-binary \
 	test0100-amd64-binary \
 	test0101-amd64-binary \
 	test0102-amd64-binary \
@@ -161,6 +163,7 @@ knight-posix-tests: \
 	test0037-knight-posix-binary \
 	test0038-knight-posix-binary \
 	test0039-knight-posix-binary \
+	test0040-knight-posix-binary \
 	test0100-knight-posix-binary \
 	test0101-knight-posix-binary \
 	test0102-knight-posix-binary \
@@ -232,6 +235,7 @@ armv7l-tests: \
 	test0037-armv7l-binary \
 	test0038-armv7l-binary \
 	test0039-armv7l-binary \
+	test0040-armv7l-binary \
 	test0100-armv7l-binary \
 	test0101-armv7l-binary \
 	test0102-armv7l-binary \
@@ -282,6 +286,7 @@ x86-tests: \
 	test0037-x86-binary \
 	test0038-x86-binary \
 	test0039-x86-binary \
+	test0040-x86-binary \
 	test0100-x86-binary \
 	test0101-x86-binary \
 	test0102-x86-binary \
@@ -332,6 +337,7 @@ riscv32-tests: \
 	test0037-riscv32-binary \
 	test0038-riscv32-binary \
 	test0039-riscv32-binary \
+	test0040-riscv32-binary \
 	test0100-riscv32-binary \
 	test0101-riscv32-binary \
 	test0102-riscv32-binary \
@@ -382,6 +388,7 @@ riscv64-tests: \
 	test0037-riscv64-binary \
 	test0038-riscv64-binary \
 	test0039-riscv64-binary \
+	test0040-riscv64-binary \
 	test0100-riscv64-binary \
 	test0101-riscv64-binary \
 	test0102-riscv64-binary \
@@ -510,6 +517,9 @@ test0038-riscv32-binary: M2-Planet | results
 
 test0039-riscv32-binary: M2-Planet | results
 	test/test0039/run_test.sh riscv32
+
+test0040-riscv32-binary: M2-Planet | results
+	test/test0040/run_test.sh riscv32
 
 test0100-riscv32-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv32
@@ -655,6 +665,9 @@ test0038-riscv64-binary: M2-Planet | results
 test0039-riscv64-binary: M2-Planet | results
 	test/test0039/run_test.sh riscv64
 
+test0040-riscv64-binary: M2-Planet | results
+	test/test0040/run_test.sh riscv64
+
 test0100-riscv64-binary: M2-Planet | results
 	test/test0100/run_test.sh riscv64
 
@@ -798,6 +811,9 @@ test0038-aarch64-binary: M2-Planet | results
 
 test0039-aarch64-binary: M2-Planet | results
 	test/test0039/run_test.sh aarch64
+
+test0040-aarch64-binary: M2-Planet | results
+	test/test0040/run_test.sh aarch64
 
 test0100-aarch64-binary: M2-Planet | results
 	test/test0100/run_test.sh aarch64
@@ -943,6 +959,9 @@ test0038-amd64-binary: M2-Planet | results
 test0039-amd64-binary: M2-Planet | results
 	test/test0039/run_test.sh amd64
 
+test0040-amd64-binary: M2-Planet | results
+	test/test0040/run_test.sh amd64
+
 test0100-amd64-binary: M2-Planet | results
 	test/test0100/run_test.sh amd64
 
@@ -1077,6 +1096,9 @@ test0038-knight-posix-binary: M2-Planet | results
 
 test0039-knight-posix-binary: M2-Planet | results
 	test/test0039/hello-knight-posix.sh
+
+test0040-knight-posix-binary: M2-Planet | results
+	test/test0040/hello-knight-posix.sh
 
 test0100-knight-posix-binary: M2-Planet | results
 	test/test0100/hello-knight-posix.sh
@@ -1279,6 +1301,9 @@ test0038-armv7l-binary: M2-Planet | results
 test0039-armv7l-binary: M2-Planet | results
 	test/test0039/run_test.sh armv7l
 
+test0040-armv7l-binary: M2-Planet | results
+	test/test0040/run_test.sh armv7l
+
 test0100-armv7l-binary: M2-Planet | results
 	test/test0100/run_test.sh armv7l
 
@@ -1422,6 +1447,9 @@ test0038-x86-binary: M2-Planet | results
 
 test0039-x86-binary: M2-Planet | results
 	test/test0039/run_test.sh x86
+
+test0040-x86-binary: M2-Planet | results
+	test/test0040/run_test.sh x86
 
 test0100-x86-binary: M2-Planet | results
 	test/test0100/run_test.sh x86
