@@ -295,6 +295,13 @@ bd7eb0a298fb0deff881c60f7a0e94435ac6ee88b605e345551bdd66ed6436ff  test/results/t
 e9e8c703e272203c5846f5eb402f84abe64318e5cf470870a452960d48ee37fe  test/results/test0039-riscv32-binary
 838571f0666df8bba205b8496c53bcb428cd05ee860d1c63f7dd32609909264d  test/results/test0039-riscv64-binary
 25cfa9f5bd75aec4e5c3e8bc44cfd70a2b53b128d7ab910a1e1f499885d9bb49  test/results/test0039-x86-binary
+456846d3f947168d21ded5220c3afe6a816b67836429a6ccf9878c2fffd2f868  test/results/test0040-aarch64-binary
+84bd4985487de45a3c98e1ca849743ddf2c4f71ab41d22cf0494104d176b31ac  test/results/test0040-amd64-binary
+5f9340fd7fe0f57e27454978ed84fffc923e4ba4b34330ba8330e0bf16be6af0  test/results/test0040-armv7l-binary
+7f56a67ee782aa2d4e92e3a73d23611f940c730f5b57a468013f8370421a8a84  test/results/test0040-knight-posix-binary
+7333f4f1fb51df194eb29f072193d9e6a76758a6d657b0429e5a8ca9bf1d824d  test/results/test0040-riscv32-binary
+7c4101d4c0d6af24dc99853ff15cba5531e138521836dd2dd1e6424731b3473e  test/results/test0040-riscv64-binary
+bb0730dc87b6aefcb66ddd475a858ca972e86c0b8addd29409d089c082e369b7  test/results/test0040-x86-binary
 9fbdb6d8893d810edcd82f573dd8237bd9821c907393f286a3c21b1f8f721bb8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -343,10 +350,10 @@ abf349aaf23111dcf813ca4c11d725e154d2367bf5ab91b62e022fd34da72f7d  test/results/t
 af4dd167d0ea436831ad24b3c337a4255b09e4628ff00979e7787735de927186  test/results/test0106-riscv32-binary
 818e8e8de251909fac6002b7b6d66a70f5e8ed7eeec5ddf5b8b3588cbc436a53  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-e8faa2b8b5e87aae239b73baa2775d335f2adfe36ff678532c9cb0cff36a495c  test/results/test1000-aarch64-binary
-584fa68cd3d9ea226e154e6828c14c7b1f97f4b3605ef0340cf91dd90be40823  test/results/test1000-amd64-binary
-5719666e0bf0037cd1fa6d0e98863f6c64244b0b42e8f636de7eabb29e0b8976  test/results/test1000-armv7l-binary
-65b947948da9bac643cd29244b3992a3b5dfe1335d87fac3c97ed39b51da5a14  test/results/test1000-knight-posix-binary
-9a6052360e7e69dc433433a54772e896ea2aea94e78bdbf58f3e57de6f3a4da4  test/results/test1000-riscv32-binary
-cda4a93be967566745d77723bf3fd84f27dfee663d4ab5ffc88479754f8791ed  test/results/test1000-riscv64-binary
-0be6b3437b3958f67e8abc36f57494acacff184436c3d3a3395f6f718819b79b  test/results/test1000-x86-binary
+f07e5566c0e79fca75818707d4c7cec0a1c73c619ae2b62a48e1363685f44011  test/results/test1000-aarch64-binary
+9ae059f2892daf0b5b72be2e65c5e06093bda867aaf0084d60eb7e9acfe815b7  test/results/test1000-amd64-binary
+8d66e8d6975b4ac1d8b27b03311f14269e3c362b5f0dc23ba8d88a4565173858  test/results/test1000-armv7l-binary
+69979cca55c46c4881951582913a84b4932d39b49c68df1a7e3fc45f92b26711  test/results/test1000-knight-posix-binary
+17197f60c4df1ff031915b8ee1955d1b2f22f35de3a89e4fcab6564a92aec716  test/results/test1000-riscv32-binary
+7c5272eba1c756e9df594f10d4d24a25713a49d7dbb9966390aae4e0e373b660  test/results/test1000-riscv64-binary
+732f6392b1c2c7a7c2d19476393c312a158e08d25f2cb23c5a914b11720b0096  test/results/test1000-x86-binary
